syntax = "proto3";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string tenant = 3;
}

message RegisterResponse {
  int32 status = 1;
  oneof data_error {
    string error = 2;
    RegisterData data = 3;
  }
}

message RegisterData {
  string token = 1;
  User user = 2;
}


message LoginRequest {
  string email = 1;
  string password = 2;
  string tenant = 3;
}

message LoginResponse {
  int32 status = 1;
  string error = 2;
  string token = 3;
  User user = 4;
}

message ValidateRequest {
  string token = 1;
  string tenant = 3;
}

message ValidateResponse {
  int32 status = 1;
  string error = 2;
  User user = 3;
}

message User {
  string id = 1;
  string email = 2;
  string tenant = 3;
}
